production/schemas/schemas-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: dissco-schemas
spec:
  selector:
    app: dissco-schemas
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dissco-schemas-manager-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`schemas.dissco.tech`)
      kind: Rule
      services:
        - name: dissco-schemas
          namespace: default
          port: 8080
